--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # ENVIRONMENT
 #--------------------------------------------------------------------
 
-CI_ENVIRONMENT = development
+CI_ENVIRONMENT = production
 
 #--------------------------------------------------------------------
 # APP
@@ -67,3 +67,4 @@ CI_ENVIRONMENT = development
 #--------------------------------------------------------------------
 
 logger.threshold = 9
+VERSION='1.0.3'
